# KOV-Ray-wasm

./: Cargo.toml  README.md  temp.ppm
.github/workflows/: deploy.yml
demo/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json
demo/src/: App.tsx  main.tsx  worker.js
demo/src/scripts/: beautiful_balls.ts  cornell_box.ts  index.ts
src/: lib.rs  main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/components/ui/: button.tsx
web/pkg/: kov_ray_wasm.d.ts  kov_ray_wasm.js  kov_ray_wasm_bg.wasm  kov_ray_wasm_bg.wasm.d.ts  package.json
web/src/: App.tsx  editor.tsx  header.tsx  index.css  main.tsx  page.tsx  theme.ts  themeProvider.tsx  themeSwitch.tsx
web/src/scripts/: beautiful_balls.ts  cornell_box.ts
