[package]
name = "kov-ray-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
kov-ray = { git = "https://github.com/SNKK62/KOV-Ray", rev="1444731" }
ray-tracer-rs = {git = "https://github.com/SNKK62/toy-ray-tracer-rs", rev = "651de45" }
rand = { version = "0.8", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
